# volume-augmentations

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  Cargo.toml  Dockerfile  README.md  pyproject.toml  setup.py  setup_vcpkg.sh
.github/workflows/: pythonpackage.yml
cmake/: CMakeCargo.cmake
examples/: augment.py  vacpp_test.py  volume_transformer.py
src/: interpolation.rs  lib.rs
tests/: rotation.py  values_manipulation.py
tools/vcpkg_ports/xtensor-blas/: portfile.cmake
va_cpp/: CMakeLists.txt
va_cpp/src/: foo.cpp  python_bindings.cpp  test_entry.cpp  transform_matrix.cpp  transform_matrix.h  transformation.cpp  types.h  utils.cpp  utils.h  volume_transformer.cpp  volume_transformer.h
va_cpp/tests/: main.cpp
va_py/tests/: benchmarks_apply.py  benchmarks_create.py  common.py  conftest.py  test_rotation.py  test_sanity.py  test_values_manipulation.py
va_py/volume_augmentations/: __init__.py
va_rs/: CMakeLists.txt  Cargo.toml
va_rs/.cargo/: config
va_rs/src/: lib.rs  transformations.rs  utils.rs
vacpp/: CMakeLists.txt
vacpp/src/: transformation.cpp
vars/: CMakeLists.txt  Cargo.toml
vars/src/: lib.rs
volume_augmentations/: __init__.py  __init__.pyi
