[package]
name = "volume-augmentations"
version = "0.1.1"
authors = ["Dominik Pieczyński <dominik.pieczynski@gmail.com>"]
edition = "2018"

[lib]
name = "volume_augmentations"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.9.0", features = ["extension-module"] }
numpy = "0.8.0"
ndarray = { version = "0.13.0" }
ndarray-linalg = { version = "0.12.0" }
blas-src = { version = "0.6.1", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.9.0", default-features = false, features = ["cblas", "lapacke", "static"] }
itertools = "0.9.0"
