[package]
name = "va_rs"
version = "0.1.1"
authors = ["Dominik Pieczyński <dominik.pieczynski@gmail.com>"]
edition = "2018"

[lib]
name = "va_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.9.0", features = ["extension-module"] }
numpy = "0.8.0"
ndarray = { version = "0.13.0" }
ndarray-linalg = { version = "0.12.0" }
itertools = "0.9.0"



[target.'cfg(target_os = "linux")'.dependencies]
blas-src = { version = "0.6.1", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.9.0", default-features = false, features = ["cblas", "lapacke", "static"] }

#[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
#blas-src = { version = "0.6.1", default-features = false, features = ["intel-mkl"] }
#intel-mkl-src = { version = "0.5.0" }

[package.metadata.maturin]
requires-dist = ["numpy~=1.18.2"]
